p3/confs/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    app: argocd
  annotations:
    spec.ingressClassName: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  # - http:
  - host: argocd.cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
